# Omega-Wass

./: CMakeLists.txt  main.cpp
include/: bytecode.hpp  runtime_structures.hpp  wasm_module_parser.hpp  wasm_types.hpp  wasm_vm.hpp
include/bytecode/: bytecode.hpp  bytecode_optimizer.hpp  test.hpp
include/data/: module_struct.hpp  types.hpp
include/runtime/: init.hpp  interpreter.hpp  runtime_structs.hpp  store.hpp  vm.hpp
include/runtime/bytecode/: bytecode.hpp
include/util/: buf_reader.hpp  module_parser.hpp  util.hpp
lib/: matrix.c
src/: bytecode.cpp  runtime_structures.cpp  wasm_modlue_parser.cpp  wasm_vm.cpp
src/runtime/: init.cpp  interpreter.cpp  store.cpp  vm.cpp
src/util/: buf_reader.cpp  module_parser.cpp  util.cpp
wasm-examples/: example.wasm  example.wat  file_bench.c  file_bench.wasm  hello.wasm  hello.wat  hello_import.c  hello_import.wasm  hello_import_static.c  hello_import_static.wasm  main.go  matx.wasm  module.wasm  mtx.c  mtx.wasm  time.h  was_file_bench.c  was_file_bench.wasm
